@@ -15,3 +15,7 @@
 	* Replaced TCP Flow lookups with hashes
 	* Minor bug and memory fixes
 
+2017-12-29  Ron Dilley <ron.dilley@uberadmin.com>
+
+        * Added offline pcap processing
+        * Added flow state caching
